# Parking-Spotter

./: Cargo.toml  LICENSE  README.md
.github/: bug_report.md
config/: settings.toml
src/: alert_system.rs  camera.rs  main.rs  parking_space_detection.rs  utils.rs  video_processing.rs
tests/: integration_tests.rs
tests/unit_tests/: alert_system_tests.rs  camera_tests.rs  parking_space_detection_tests.rs  video_processing_tests.rs
