[package]
name = "parking_space_detector"
version = "1.0.0"
edition = "2018"

[dependencies]
opencv = "0.54"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
lettre = { version = "0.10", default-features = false, features = ["rustls-tls", "async-std1",  "async-std1-rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "parking_space_detector"
path = "src/main.rs"
